# atrius-HIS

./: .gitignore  Cargo.toml  README.md
crates/his-adt/: Cargo.toml
crates/his-adt/src/: error.rs  lib.rs  service.rs
crates/his-documentation/: Cargo.toml
crates/his-documentation/src/: clinical_documents.rs  error.rs  helpers.rs  kinds.rs  lib.rs  service.rs
crates/his-domain/: Cargo.toml  README.md
crates/his-domain/src/: adt.rs  coded_choices.rs  config.rs  documentation.rs  fhir_client.rs  lib.rs  narrative.rs  patient.rs  platform.rs  profiles.rs  schedule_recurrence.rs  scheduling.rs  search.rs
crates/his-domain/src/clinical/: document_bundle.rs  entry_builders.rs  lifecycle.rs  mod.rs  slice.rs  transaction.rs
crates/his-domain/src/clinical/orders/: lab_order.rs  mod.rs
crates/his-domain/src/clinical/specs/: anesthesia_record.rs  discharge_summary.rs  entry_sliced.rs  immunization_record.rs  invoice_record.rs  mod.rs  op_consult.rs  operative_note.rs  prescription.rs  procedure_note.rs  progress_note.rs  snomed_document.rs  wellness.rs
crates/his-domain/tests/: composition_profile_validation.rs  encounter_profile_validation.rs  location_bed_profile_validation.rs
crates/his-foundation/: Cargo.toml
crates/his-foundation/src/: error.rs  lib.rs  service.rs
crates/his-orders/: Cargo.toml
crates/his-orders/src/: error.rs  lib.rs  service.rs
crates/his-registration/: Cargo.toml
crates/his-registration/src/: error.rs  lib.rs  mrn.rs  service.rs
crates/his-scheduling/: Cargo.toml
crates/his-scheduling/src/: error.rs  lib.rs  service.rs
crates/his-server/: Cargo.toml  README.md
crates/his-server/src/: auth.rs  main.rs  request_auth.rs  state.rs
crates/his-server/src/routes/: adt.rs  clinical_documents.rs  documentation.rs  foundation.rs  mod.rs  orders.rs  registration.rs  scheduling.rs
deploy/: docker-compose.yml
deploy/env/: hfs-clinical.env.example  his-server.env.example  hts.env.example
deploy/keycloak/: README.md  bootstrap-admin-bff.sh  bootstrap-bff-scopes-logout.sh  bootstrap-clinical-bff.sh  get-token.sh  realm.json
docs/: platform-hardening.md
scripts/: platform-down.sh  platform-up.sh  run-clinical-hfs.sh  run-his-server.sh  run-hts.sh  seed-atrius-terminology.py  seed-hospital-foundation.py  smoke-adt.sh  smoke-clinical-documents.sh  smoke-common.sh  smoke-consult-note.sh  smoke-discharge-summary.sh  smoke-lab-orders.sh  smoke-opd-lifecycle.sh  smoke-platform.sh  smoke-registration.sh  smoke-scheduling.sh  smoke-start-visit.sh
