[package]
name = "his-documentation"
description = "Clinical documentation (consultation notes) for Atrius HIS"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
his-domain = { path = "../his-domain" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }
